# knitpkg-mt

./: .gitignore  LICENSE  README.md  mkdocs.yml  pyproject.toml
.github/workflows/: docs.yml  publish_pypi.yml  release.yml  release_win.yml
docs/: getting-started.md  helix-manifest.html  index.md  installation.md
docs/concepts/: build-info.md  composite-packages.md  directives.md  git-first.md  include-vs-flat-modes.md  install-and-compile.md  manifest.md  overview.md  projects-vs-packages.md  registry.md  telemetry.md  unit-tests.md
docs/reference/: cli.md  manifest.md  version-ranges.md
docs/stylesheets/: extra.css
docs/terms-of-service/: registry.md  telemetry.md
docs/user-guide/: build-info.md  configuration.md  creating-packages.md  creating-projects copy.md  creating-projects.md  local-dependencies.md  managing-dependencies.md  overview.md  registry copy.md  registry.md  revisions.md  target-platforms.md  unit-tests.md
docs/user-guide/resources/: KnitPkgATR.mq5
docs/user-guide/resources/draft1/: KnitPkgExpertDemo.mq5  KnitPkgExpertDemo.mqh
docs/user-guide/resources/draft2/: IndicatorSeries.mqh  KnitPkgExpertDemo.mq5  KnitPkgExpertDemo.mqh
helix/: cli.py
helix/commands/: autocomplete.py  compile.py  config.py  init.py  install.py  login.py  mkinc.py  publish.py
helix/core/: constants.py  dependency_downloader.py  exceptions.py  file_reading.py  lockfile.py  models.py  settings.py  utils.py
helix/mql/: __init__.py  constants.py  dependency_downloader.py  exceptions.py  models.py  mql_paths.py  settings.py  validators.py
knitpkg/: cli.py
knitpkg/commands/: add.py  autocomplete.py  build.py  checkinstall.py  compile.py  config.py  get.py  global_config.py  info.py  init.py  install.py  login.py  logout.py  publish.py  register.py  search.py  status.py  telemetry.py  whoami.py  yank.py
knitpkg/core/: auth.py  cli_version.py  config.py  console.py  constants.py  dependency_downloader.py  exceptions.py  file_reading.py  global_config.py  lockfile.py  models.py  project_get.py  project_manager.py  project_register.py  registry.py  resolve_helper.py  settings.py  system.py  telemetry.py  version_handling.py
knitpkg/mql/: __init__.py  autocomplete.py  build_header.py  compile.py  config.py  constants.py  dependency_downloader.py  exceptions.py  install.py  models.py  mql_paths.py  project_init.py  project_init_templates.py  settings.py  validators.py  warnings.py
scripts/: generate_manifest_docs.py
tests/: test_dependency_url.py  test_exceptions.py  test_include_parser.py  test_integration_deps.py  test_manifest.py  test_resolve_version.py  test_version_specifier.py
